# api/application/usecase/response/test.go
@@ -1,11 +1,0 @@
-package response
-
-type TestGet struct {
-	Test string `json:"test"`
-}
-
-func NewTestGet(s string) *TestGet {
-	return &TestGet{
-		Test: s,
-	}
-}
