# api/domain/repository/beautician.go
@@ -8,4 +8,5 @@ import (
 
 type Beautician interface {
 	Create(ctx context.Context, ent *entity.Beautician) error
+	Get(ctx context.Context, id int64) (*entity.Beautician, error)
 }
