# api/infrastructure/repository/beautician.go
@@ -20,3 +20,10 @@ func NewBeautician(conn *db.Conn) repository.Beautician {
 func (b *beautician) Create(ctx context.Context, ent *entity.Beautician) error {
 	return ent.Insert(ctx, b.Conn, boil.Infer())
 }
+
+func (b *beautician) Get(ctx context.Context, id int64) (*entity.Beautician, error) {
+	return entity.Beauticians(
+		entity.BeauticianWhere.ID.EQ(id),
+		entity.BeauticianWhere.DeletedAt.IsNull(),
+	).One(ctx, b.Conn)
+}
