# api/presentation/router/router.go
@@ -24,24 +24,21 @@ func Init() *Router {
 }
 
 func (r *Router) Run() {
-	fmt.Println("Listening on port 3000")
-	http.ListenAndServe(":3000", r)
+	fmt.Println("Listening on port 8080")
+	http.ListenAndServe(":8080", r)
 }
 
 func (r *Router) Routes() {
 	beauticianController := di.InitBeautician()
-	testController := di.InitTest()
 
 	r.Route("/api", func(r chi.Router) {
 		r.Route("/v1", func(r chi.Router) {
 			r.Group(func(r chi.Router) {
-				r.Use(middleware.AuthAPI)
+				// r.Use(middleware.AuthAPI)
 				r.Route("/beautician", func(r chi.Router) {
 					r.Post("/", beauticianController.Create)
+					r.Get("/", beauticianController.Get)
 				})
-			})
-			r.Route("/hello", func(r chi.Router) {
-				r.Get("/", testController.Get)
 			})
 		})
 	})
